# super-simple-upload

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
