[package]
name = "super-simple-upload"
version = "0.1.0"
authors = ["half cambodian hacker man <half-kh-hacker@hackery.site>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
hyper = "0.13"
http = "0.2"
async-std = "1.5"
futures = "0.3"
bytes = "0.5"
rand = "0.7.3"
log = "0.4"
simplelog = "0.7"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"